--- a/public/styles.css
+++ b/public/styles.css
@@ -1,8 +1,8 @@
 body {
     font-family: Arial, sans-serif;
-    background-color: #e0f7fa;
     background-image: url('https://www.toptal.com/designers/subtlepatterns/uploads/leaves.png');
     background-repeat: repeat;
+    background-size: auto;
     overflow: hidden;
     margin: 0;
     padding: 0;
